# pod-protocol

./: .env.example  .env.production  .gitconfig.example  .gitignore  .npmignore  .yarnrc.yml  AGENT_CREATION_SUMMARY.md  Anchor.toml  BANNER_SHOWCASE.md  BETA_PROGRAM.md  BUG_BOUNTY_PROGRAM.md  CLAUDE.md  CLI_ENHANCEMENT_SUMMARY.md  CODE_OF_CONDUCT.md  COMMUNITY_ENGAGEMENT.md  COMPATIBILITY_FIX.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_FIXES.md  DEPLOYMENT.md  DEPLOYMENT_SETUP_SUMMARY.md  Dockerfile.prod  FINAL_SUMMARY.md  GitHub-Actions-Fixes-Summary.md  LICENSE  MAINNET_DEPLOYMENT_CHECKLIST.md  MIGRATION_GUIDE.md  MONITORING_SETUP.md  PROJECT_STRUCTURE.md  PROTOCOL_SPEC.md  QODO_MCP_READY.md  README.md  SCALABILITY_ANALYSIS.md  SDK_IMPLEMENTATION_SUMMARY.md  SDK_TEST_IMPLEMENTATION_SUMMARY.md  SDK_TEST_SUITE_FINAL_REPORT.md  SECURITY_AUDIT_PLAN.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FREEZE.md  SYNC_RESOLUTION.md  (+33 more)
.cargo/: config.toml
.github/: REPOSITORY_CONFIG.md  copilot-instructions.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: beta-feedback.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: build-and-test.yml  build-verification.yml  ci.yml  claude-code-review.yml  code-quality.yml  coderabbitai.yaml  dependency-updates.yml  docs-deploy.yml  docs.yml  eslint.yml  frontend-deploy.yml  git-health.yml  github-pages.yml  jekyll-gh-pages.yml  nextjs.yml  npm-grunt.yml  performance.yml  publish-packages.yml  release.yml  rust.yml  stale.yml  super-linter.yml
.qodo/agents/pod-protocol/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  agent.toml  package.json  validate.js
.trae/rules/: DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  project_rules.md
.windsurf/: README.md
ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
actions/setup-solana/: action.yml
agents/: README.md
cli/: eslint.config.js  package.json  test-entry.js  tsconfig.json
cli/src/: index.ts
cli/src/commands/: agent.ts  analytics.ts  channel.ts  config.ts  discovery.ts  escrow.ts  message.ts  zk-compression.ts
cli/src/test/: basic.test.ts  cli-commands.test.ts
cli/src/types/: node-sodium.d.ts
cli/src/utils/: branding.ts  client.ts  command-context.ts  config.ts  enhanced-error-handler.ts  error-handler.ts  output-formatter.ts  secure-memory.ts  shared.ts  validation.ts
docs/: BUILD_SAFETY.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  PACKAGE_MANAGERS.md  PERFORMANCE.md  README.md  Rules-Reference.md  SECURITY.md  TESTING.md  debug.html  frontend.md  getting-started.md  index.html  terminal-debug.js  terminal-test.html  terminal.css
docs/api/: API_REFERENCE.md
docs/assets/: enhanced-index.html  index-old.html  index.html  terminal-advanced.js  terminal-section.html  terminal.css  terminal.js
docs/developer/: API_REFERENCE.md  SDK_GUIDE.md
docs/guides/: AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  DEVELOPER_GUIDE.md  ENVIRONMENT_CONFIG.md  GETTING_STARTED.md  GITHUB_DEPLOYMENT_GUIDE.md  MCP_SETUP_README.md  SECRETS.md  SECURITY.md  TERMINAL_README.md  WORKSPACE_CONFIGURATION.md  ZK-COMPRESSION-README.md  getting-started.md
docs/user/: USER_GUIDE.md
examples/: README.md  debug.js  demo.js
frontend/: README.md  anchor-default.js  jest.config.js  jest.setup.ts  next-env.d.ts  next.config.js  next.config.ts  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: agent-management.spec.ts  auth.spec.ts  global-setup.ts  global-teardown.ts  messaging.spec.ts  mobile-responsive.spec.ts  performance.spec.ts  setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AsyncErrorBoundary.tsx  ErrorBoundary.tsx
frontend/src/hooks/: usePodClient.ts  useWebSocket.ts
frontend/src/lib/: analytics.ts  fonts.ts  performance.ts  security.ts  utils.ts  websocket-server.ts
monitoring/: prometheus.yml
programs/pod-com/: Cargo.toml
programs/pod-com/src/: lib.rs
scripts/: README.md  build-compatible.sh  build.js  check-dependencies.js  deploy-docs.sh  deploy-frontend.sh  dev-with-zk.sh  final-verification.js  fix-types.js  make-executable.sh  production-test.js  setup-package-managers.js  setup-photon-indexer.sh  validate-workflows.js  verify-build.js
sdk/: README.md  package.json  rollup.config.js  tsconfig.json
sdk-js/: .babelrc  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  rollup.config.js  run_tests.js  tsconfig.json
sdk-js/src/: index.js  types.js
sdk-js/src/services/: agent.js  analytics.js  base.js  channel.js  discovery.js  escrow.js  ipfs.js  message.js  zkCompression.js
sdk-js/src/utils/: crypto.js  pda.js  secureMemory.js
sdk-js/tests/: agent.test.js  basic.test.js  e2e.test.js  integration.test.js  ipfs.test.js  merkle-tree.test.js  message.test.js  setup.js  zk-compression.test.js
sdk-python/: README.md  pyproject.toml  pytest.ini  run_tests.py
sdk-python/pod_protocol/: __init__.py  client.py  exceptions.py  types.py  utils.py
sdk-python/pod_protocol/services/: __init__.py  agent.py  analytics.py  base.py  channel.py  discovery.py  escrow.py  ipfs.py  message.py  zk_compression.py
sdk-python/tests/: conftest.py  test_agent.py  test_basic.py  test_e2e.py  test_integration.py  test_ipfs.py  test_merkle_tree.py  test_message.py  test_zk_compression.py
sdk/src/: client.d.ts  client.d.ts.map  client.js  client.js.map  client.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  pod_com.d.ts  pod_com.d.ts.map  pod_com.js  pod_com.js.map  pod_com.ts  types-safe.ts  types.d.ts  types.d.ts.map  types.js  types.js.map  types.ts  utils.d.ts  utils.d.ts.map  utils.js  utils.js.map  utils.ts
security/: penetration-testing.md
tests/: README.md  compression-proof.test.ts  ipfs-hash.test.ts  merkle-tree.test.ts  performance-benchmark.test.ts  pod-com-clean.test.ts  pod-com.test.ts  rust-hash-compare.test.ts  security-audit.test.ts  test-utils.ts
tests/rust-hasher/: Cargo.toml
workflows/: ci.yml  code-quality.yml  dependency-updates.yml  docs.yml  performance.yml  release.yml
(+105 files in other folders)
