[package]
name = "pod-com"
version = "0.1.0"
description = "PoD Protocol (Prompt or Die): AI Agent Communication Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pod_com"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Core dependencies
anchor-lang = { version = "=0.31.1", default-features = false, features = ["init-if-needed"] }

# Explicitly avoid pulling in getrandom/rand through solana-program
# by using anchor-lang's re-exported solana-program
# solana-program = { version = "=1.17.0", default-features = false }

# Spl dependencies (commented out as they're optional)
# spl-token = { version = "=4.0.0", optional = true, default-features = false }
# spl-associated-token-account = { version = "=2.0.0", optional = true, default-features = false }

# Serialization - using the one from anchor-lang to avoid conflicts
# borsh = { version = "=1.5.7" }
# borsh-derive = "=0.10.3"

# Error handling
thiserror = "=2.0.12"

# Explicitly disable any features that might pull in getrandom/rand
[package.metadata.docs.rs]
all-features = false
no-default-features = true

[dev-dependencies]
anchor-lang = { version = "=0.31.1", features = ["derive"] }
# Test dependencies can be added here if needed
